--- a/osp_bootstrap_cobbler/conf_common/bxb.conf
+++ b/osp_bootstrap_cobbler/conf_common/bxb.conf
@@ -1,7 +1,7 @@
 [DEFAULT]
 proxy = http://proxy.esl.cisco.com:80
 
-[AnsibleStep]
+[ansible]
 proxy_env = { 'ftp_proxy':   "%(proxy)s",
               'http_proxy':  "%(proxy)s",
               'https_proxy': "%(proxy)s"}
