--- a/osp_bootstrap_cobbler/conf_common/sj.conf
+++ b/osp_bootstrap_cobbler/conf_common/sj.conf
@@ -9,17 +9,17 @@ proxy_host = proxy.esl.cisco.com
 proxy_port = 80
 proxy = http://%(proxy_host)s:%(proxy_port)s
 
-[CobblerOSInstallStep]
+[cobbler]
 cobbler_api_url = http://172.29.74.8/cobbler_api
 cobbler_username = cobbler
 cobbler_password = cobbler
 
 
-[AnsibleStep]
+[ansible]
 proxy_env = { 'ftp_proxy':   "%(proxy)s"}
 
 overcloud_control_scale = 1
 overcloud_compute_scale = 1
-overcloud_ceph-storage-scale = 0
-overcloud_block-storage-scale = 0
-overcloud_swift-storage-scale = 0
+overcloud_ceph_storage_scale = 0
+overcloud_block_storage_scale = 0
+overcloud_swift_storage_scale = 0
