--- a/ansible/roles/osp-director/templates/undercloud.conf
+++ b/ansible/roles/osp-director/templates/undercloud.conf
@@ -1,4 +1,7 @@
 [DEFAULT]
+
+image_path = /home/stack/images
+
 local_ip = {{ undercloud_local_ip }}
 local_interface = {{ undercloud_local_interface }}
 masquerade_network = {{ undercloud_masquerade_network }}
@@ -7,6 +10,9 @@ dhcp_end = {{ undercloud_dhcp_end }}
 network_cidr = {{ undercloud_network_cidr }}
 network_gateway = {{ undercloud_network_gateway }}
 discovery_iprange = {{ undercloud_discovery_iprange }}
+
+undercloud_public_vip = {{ undercloud_public_vip }}
+undercloud_admin_vip = {{ undercloud_admin_vip }}
 
 [auth]
 undercloud_admin_password = password
