--- a/osp_bootstrap_cobbler/conf_common/base.conf
+++ b/osp_bootstrap_cobbler/conf_common/base.conf
@@ -42,3 +42,5 @@ overcloud_compute_scale = 1
 overcloud_ceph_storage_scale = 0
 overcloud_block_storage_scale = 0
 overcloud_swift_storage_scale = 0
+
+dns_server_1 = 171.70.168.183
