--- a/ansible/roles/osp-overcloud/templates/controller.yaml
+++ b/ansible/roles/osp-overcloud/templates/controller.yaml
@@ -65,9 +65,19 @@ resources:
               members:
                 -
                   type: interface
-                  name: {{ controller_internal_nic }}
+                  name: {{ controller_external_nic }}
                   # force the MAC address of the bridge to this interface
                   primary: true
+                -
+                  type: vlan
+                  vlan_id: {get_param: ExternalNetworkVlanID}
+                  addresses:
+                  -
+                    ip_netmask: {get_param: ExternalIpSubnet}
+                  routes:
+                    -
+                      ip_netmask: 0.0.0.0/0
+                      next_hop: {get_param: ExternalInterfaceDefaultRoute}
                 -
                   type: vlan
                   vlan_id: {get_param: InternalApiNetworkVlanID}
@@ -92,13 +102,6 @@ resources:
                   addresses:
                   -
                     ip_netmask: {get_param: TenantIpSubnet}
-            - type: interface
-              name: {{ controller_external_nic }}
-              addresses:
-                - ip_netmask: {get_param: ExternalIpSubnet}
-              routes:
-                - ip_netmask: 0.0.0.0/0
-                  next_hop: {get_param: ExternalInterfaceDefaultRoute}
 
 outputs:
   OS::stack_id:
