Make tox respect SSH_AUTH_SOCK

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = py27
 [testenv]
 usedevelop = True
 deps = -r{toxinidir}/requirements.txt
+passenv = SSH_AUTH_SOCK
 
 commands =
   osp7_bootstrap: osp7_bootstrap {posargs}
