updated heat-template review
tweaked tox for jenkins

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = py27
 [testenv]
 usedevelop = True
 deps = -r{toxinidir}/requirements.txt
-passenv = SSH_AUTH_SOCK
+passenv =
+  SSH_AUTH_SOCK
+  PYTHONUNBUFFERED
 
 commands =
   osp7_bootstrap: osp7_bootstrap {posargs}
