Tweaking tox.ini so it will run on older versions of tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,9 @@ passenv =
   SSH_AUTH_SOCK
   PYTHONUNBUFFERED
 
+[testenv:osp7_bootstrap]
 commands =
-  osp7_bootstrap: osp7_bootstrap {posargs}
+  osp7_bootstrap {posargs}
 
 [testenv:venv]
 commands = {posargs}
