splitting up ansible roles
pulling puppet and heat refs out to properties (to be injected from CI later)
Added refresh-images.sh to make redeployment easier
Corrected formatting of booleans in networking-cisco-envronment.yaml

--- a/ansible/osp-director.yml
+++ b/ansible/osp-director.yml
@@ -5,5 +5,6 @@
     - etc-hosts
     - rhel-register
     - osp-director
+    - osp-prep-for-overcloud
     - osp-overcloud
-    - osp-test-data
+#    - osp-test-data
