renamed root package to match egg name
moved ansible playbook under renamed package so everything works like a proper python module

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,8 @@ classifier =
 
 [files]
 packages =
-    osp_bootstrap_cobbler
-data_files =
-    ansible=ansible
+    osp7_installer
+
 
 [global]
 setup-hooks =
@@ -24,7 +23,7 @@ setup-hooks =
 
 [entry_points]
 console_scripts =
-    osp7_bootstrap = osp_bootstrap_cobbler.bootstrap:main
+    osp7_bootstrap = osp7_installer.bootstrap:main
 
 [build_sphinx]
 all_files = 1
