--- a/osp7_installer/conf_common/base.conf
+++ b/osp7_installer/conf_common/base.conf
@@ -44,3 +44,6 @@ overcloud_block_storage_scale = 0
 overcloud_swift_storage_scale = 0
 
 dns_server_1 = 171.70.168.183
+
+neutron_mechanism_drivers = openvswitch,cisco_nexus
+
